# glpi-mcp

./: .gitignore  README.md  TODO.md  config.example.json  pyproject.toml  server.py
tests/: test_kb_tools.py
